--- a/m.html
+++ b/m.html
@@ -8,7 +8,7 @@ Color= "white"
 Face= "Arial"> 
 <b> <span style="color:pink">Objetivo</b> </span><br>
 <br>
-Ofrecer nuestros servicios con una buena calidad y desarrollo de programacion en distintas plataformas,utilizando alta tecnologÌa de vanguardia y de un lenguaje coloquial. <br>
+Ofrecer nuestros servicios con una buena calidad y desarrollo de programacion en distintas plataformas,utilizando alta tecnolog√≠a de vanguardia y de un lenguaje coloquial. <br>
 <br>
 <hr>
 <b> <span style="color:pink">Mision</b></span> <br>
@@ -18,29 +18,29 @@ Complacer al cliente en todos sus requisitos que pida hacia cualquier plataforma
 <hr>
 <b><span style="color:pink">Vision</b> </span><br>
 <br>
-Ser una empresa reconodida a nivel nacional y mundial por nuestro programas de alta calidad, de igual manera contar con varias sucursales en varios paÌses y buenas crÌticas.<br>
+Ser una empresa reconodida a nivel nacional y mundial por nuestro programas de alta calidad, de igual manera contar con varias sucursales en varios pa√≠ses y buenas cr√≠ticas.<br>
 <br>
 <hr>
 <b><span style="color:pink">Valores</b></span><br>
 <br>
 <i>Responsabilidad: </i><br> Elaborar el contenido del cliente, entregar en tiempo y forma en la fecha acordada.<br>
 <br>
-<i>Eficacia: </i><br> Asegurar que la aplicaciÛn funcione de acuerdo a los campos solicitados.<br>
+<i>Eficacia: </i><br> Asegurar que la aplicaci√≥n funcione de acuerdo a los campos solicitados.<br>
 <br>
-<i>Honestidad: </i><br> Proporcionar informaciÛn veraz y precisa.<br>
+<i>Honestidad: </i><br> Proporcionar informaci√≥n veraz y precisa.<br>
 <br>
 <i>Flexibilidad: </i><br> Adaptar el trabajo de acuerdo a las necesidades del cliente<br>
 <br>
-<i>Equidad: </i><br> Ofrecer un buen trato y establecer una forma de pago f·cil a todo tipo de cliente sin importar su estatus economico o rasgos fÌsicos.<br>
+<i>Equidad: </i><br> Ofrecer un buen trato y establecer una forma de pago f√°cil a todo tipo de cliente sin importar su estatus economico o rasgos f√≠sicos.<br>
 <br>
 <hr>
 <b><span style="color:pink">Servicios</b> </span><br>
 <br>
-Nuestra empresa esta enfocada al area de programaciÛn.
+Nuestra empresa esta enfocada al area de programaci√≥n.
 Los servicios que ofrece la empresa son los siguientes:
 <UL> 
 <Li Type="square" Bases de datos 
-<Li>P·ginas web 
+<Li>P√°ginas web 
 <Li>Programa desarrollados en:
 <UL>
 <Li>NetBeans
@@ -48,8 +48,8 @@ Los servicios que ofrece la empresa son los siguientes:
 <Li>PseInt
 <Li>DFD
 </UL>
-<Li>CreaciÛn de Slogan y Loogtipos desarollados en CorelDraw
-<Li>Aplicaciones mÛviles para Android desarolladas en:
+<Li>Creaci√≥n de Slogan y Loogtipos desarollados en CorelDraw
+<Li>Aplicaciones m√≥viles para Android desarolladas en:
 <ul>
 <li>App inventor
 <li>Eclipse Android
@@ -84,18 +84,19 @@ Color= "white"
 Face= "Eras Light ITC"> <A HREF="Ivonne1.PDF" target="top">Ing.Campos Chirino Marlene Ivonne</TD> <TH COLSPAN="2"><FONT
 Size= "4"
 Color= "white"
-Face= "Eras Light ITC">Gerente de consulta tÈcnica a clientes y servicios de computo</TH></TR>
+Face= "Eras Light ITC">Gerente de consulta t√©cnica a clientes y servicios de computo</TH></TR>
 <TR> <TD ALIGN="CENTER" VALIGN="MIDDLE"><FONT
 Size= "4"
 Color= "white"
-Face= "Eras Light ITC">  <A HREF="Jose1.PDF" target="top">Lic.Villegas Colindres JosÈ Gabriel </TD> <TH COLSPAN="2"><FONT
+Face= "Eras Light ITC">  <A HREF="Jose1.PDF" target="top">Lic.Villegas Colindres Jos√© Gabriel </TD> <TH COLSPAN="2"><FONT
 Size= "4"
 Color= "white"
-Face= "Eras Light ITC">Gerente de desarrollo tÈcnico</TH></TR>
+Face= "Eras Light ITC">Gerente de desarrollo t√©cnico</TH></TR>
 </TABLE>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/6svvtOjLA-A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 -----Para ver un ejemplo de nuestros servicios da <A HREF="https://jemaalvarez.github.io/La-ballena-Gris/" target="top">Clic</A> aqui .>
 </FONT>
 </P>
 <CENTER>
-<embed src="Photograph - Ed sheeran (Traducida al espaÒol) HD.mp3"></EMBED><br>
+<embed src="Photograph - Ed sheeran (Traducida al espa√±ol) HD.mp3"></EMBED><br>
 </html>
